# ROM-Browser

./: Makefile.am  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac
data/: org.hotvic.rombrowser.gschema.xml  org.hotvic.rombrowser.gschema.xml.in  rombrowser.gresource.xml  ui.gresource.xml.in
data/ui/: menu.ui  menu.ui.in  rbmw.ui.in  window.ui
m4/: ChangeLog
po/: POTFILES.in  missing  notexist
src/: Makefile.am  config.h.in  main.cc  rb-app.cc  rb-app.hh  rb-settings.hh  rb-window.cc  rb-window.hh  rombrowser.c  rombrowserapp.c  rombrowserapp.h  rombrowserappwindow.c  rombrowserappwindow.h  rombrowsercmds-file.c  rombrowsercmds-help.c  rombrowsercmds.h  rombrowserdirs.c  rombrowserdirs.h  rombrowsersettings.c  rombrowsersettings.h
